<resources>
    <string name="app_name">Cy_Calculator</string>
    <string name="Bt_Personal">Personal Loan</string>
    <string name="Bt_Housing">Housing Loan</string>
    <string name="Bt_Submit">SUBMIT</string>

    <string name="Tv_PersonalCal">Personal Loan Calculator</string>
    <string name="Tv_HousingCal">Housing Loan Calculator</string>

    <string name="Tv_LoanAmount">Loan Amount: </string>
    <string name="Tv_InterestRate">Interest Rate: </string>
    <string name="Tv_NumOfRepayment">Number of Repayment: </string>
    <string name="Tv_LoanStart">Loan Start Date: </string>
    <string name="Tv_LoanEnd">Loan End Date: </string>

    <string name="Tv_PaymentNo">Payment Number</string>
    <string name="Tv_balance">Beginning balance (RM)</string>
    <string name="Tv_monthlyRepayment">Monthly Repayment (RM)</string>
    <string name="Tv_interest">Interest Paid (RM)</string>
    <string name="Tv_principal">Principal Paid (RM)</string>

    <string name="Tv_TotalAmount">Total Loan Amount: </string>
    <string name="Tv_TotalInterest">Total Interest: </string>

</resources>