<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_PersonalCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/Tv_PersonalCal"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Loan Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/Tv_LoanAmount"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_LoanAmountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" RM5,000 "
                    android:textSize="20dp"/>
            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/s_LoanAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1000"
                android:value="5000"
                android:valueFrom="0"
                android:valueTo="50000" />
        </LinearLayout>
        <!-- ends Loan Amount -->

        <!-- Interest Rate -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/Tv_InterestRate"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_InterestRateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.0 %"
                    android:textSize="20dp" />
            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/s_InterestRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="12"
                android:stepSize="0.1"
                android:value="4"/>
        </LinearLayout>
        <!-- ends Interest Rate -->

        <!-- Layout for Number of Repayments -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/Tv_NumberofRepayment"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_RepaymentsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12 months"
                    android:textSize="20dp"/>
            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/s_Repayments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="120"
                android:stepSize="1"
                android:value="12"/>
        </LinearLayout>
        <!-- ends Number of Repayments -->

        <!-- Loan Start Date -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tv_LoanStart"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/tv_StartDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:layout_marginEnd="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/ic_calender"
                android:scaleType="fitCenter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_LoanStart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <!-- ends Loan Start Date -->


        <!-- Submit Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

        <TextView
            android:id="@+id/Tv_Guide2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scroll down to view"
            android:visibility="gone"
            android:textColor="@color/green"
            android:paddingTop="16dp"/>


        <!-- Table -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TableLayout
                android:id="@+id/tb_PaymentSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:visibility="gone"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:elevation="4dp"
                android:dividerHeight="1dp">

                <TableRow
                    android:layout_marginBottom="16dp"
                    android:background="@color/white">

                    <TextView
                        android:text="@string/Tv_PaymnetNo"
                        android:textStyle="bold"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:text="@string/Tv_balance"
                        android:textStyle="bold"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:text="@string/Tv_monthlyRepayment"
                        android:textStyle="bold"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:text="@string/Tv_interest"
                        android:textStyle="bold"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:text="@string/Tv_principal"
                        android:textStyle="bold"
                        android:layout_marginEnd="12dp"/>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>

    </LinearLayout>
</ScrollView>
